my_complete notebook

--- a/Assignment3/notebooks/my.ipynb
+++ b/Assignment3/notebooks/my.ipynb
@@ -70,7 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot Scores"
+    "# Plot Scores\n",
+    "To use this as a \"gold standard\" against which to evaluate a motif, you scan each sequence with your motif WMM, scoring each of the 113-k+1 potential start positions."
    ]
   },
   {
