Extra credit assignment 4

--- a/Assignment4/notebooks/evaluate.ipynb
+++ b/Assignment4/notebooks/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3149,7 +3149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3167,7 +3167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3306,7 +3306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3582,54 +3582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def overlap_count(t1, t2):\n",
-    "    overlap = set(range(t1[0], t1[1]+1)) & set(range(t2[0], t2[1]+1))\n",
-    "    return len(overlap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iter_pred = iter(hits_gt50bp[['start', 'end']].head(10).values)\n",
-    "iter_gold = iter(genepos[['start', 'end']].values)\n",
-    "overlap_ratios = []\n",
-    "overlaps =[]\n",
-    "gold = next(iter_gold)\n",
-    "for pred in iter_pred:\n",
-    "    gene_overlaps = []\n",
-    "    length = pred[1]-pred[0]\n",
-    "    overlap = 0\n",
-    "    while pred[1] > gold[0]:\n",
-    "        c = overlap_count(pred, gold)\n",
-    "        overlap += c\n",
-    "        if c> 0:\n",
-    "            gene_overlaps.append(gold)\n",
-    "        gold = next(iter_gold)\n",
-    "    overlap_ratios.append(overlap/length)\n",
-    "    overlaps.append(gene_overlaps)\n",
-    "#     print(f'{pred} Total overlap  = {overlap}, length = {length}, ratio = {overlap/length}')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Matches with 50% overlap threshold with gold positions :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -3664,8 +3618,8 @@
        "      <th>end</th>\n",
        "      <th>length</th>\n",
        "      <th>percentage_overlap</th>\n",
-       "      <th>match</th>\n",
        "      <th>overlaps</th>\n",
+       "      <th>match</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3675,9 +3629,9 @@
        "      <td>97326</td>\n",
        "      <td>97541</td>\n",
        "      <td>216</td>\n",
-       "      <td>52.093023</td>\n",
-       "      <td>True</td>\n",
+       "      <td>51.851852</td>\n",
        "      <td>[[97426, 97537]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3685,9 +3639,9 @@
        "      <td>97627</td>\n",
        "      <td>97823</td>\n",
        "      <td>197</td>\n",
-       "      <td>44.897959</td>\n",
-       "      <td>False</td>\n",
+       "      <td>44.670051</td>\n",
        "      <td>[[97629, 97716]]</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -3696,8 +3650,8 @@
        "      <td>118179</td>\n",
        "      <td>101</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
        "      <td>[]</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3705,9 +3659,9 @@
        "      <td>154610</td>\n",
        "      <td>157697</td>\n",
        "      <td>3088</td>\n",
-       "      <td>96.469064</td>\n",
-       "      <td>True</td>\n",
+       "      <td>96.437824</td>\n",
        "      <td>[[154662, 157639]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3715,9 +3669,9 @@
        "      <td>157782</td>\n",
        "      <td>159591</td>\n",
        "      <td>1810</td>\n",
-       "      <td>85.848535</td>\n",
-       "      <td>True</td>\n",
+       "      <td>85.801105</td>\n",
        "      <td>[[157847, 157919], [157984, 159463]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -3725,9 +3679,9 @@
        "      <td>358766</td>\n",
        "      <td>358942</td>\n",
        "      <td>177</td>\n",
-       "      <td>86.363636</td>\n",
-       "      <td>True</td>\n",
+       "      <td>85.875706</td>\n",
        "      <td>[[358768, 358845], [358869, 358943]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -3735,9 +3689,9 @@
        "      <td>552537</td>\n",
        "      <td>552862</td>\n",
        "      <td>326</td>\n",
-       "      <td>97.230769</td>\n",
-       "      <td>True</td>\n",
+       "      <td>96.932515</td>\n",
        "      <td>[[552541, 552856]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -3745,9 +3699,9 @@
        "      <td>637579</td>\n",
        "      <td>638153</td>\n",
        "      <td>575</td>\n",
-       "      <td>81.184669</td>\n",
-       "      <td>True</td>\n",
+       "      <td>81.043478</td>\n",
        "      <td>[[637583, 637659], [637667, 637742], [637772, ...</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -3755,9 +3709,9 @@
        "      <td>638334</td>\n",
        "      <td>640132</td>\n",
        "      <td>1799</td>\n",
-       "      <td>86.540601</td>\n",
-       "      <td>True</td>\n",
+       "      <td>86.492496</td>\n",
        "      <td>[[638448, 639930], [639995, 640067]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -3765,38 +3719,38 @@
        "      <td>640217</td>\n",
        "      <td>643449</td>\n",
        "      <td>3233</td>\n",
-       "      <td>95.761139</td>\n",
-       "      <td>True</td>\n",
+       "      <td>95.731519</td>\n",
        "      <td>[[640275, 643254], [643333, 643447]]</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     state   start     end  length  percentage_overlap  match  \\\n",
-       "0  State 2   97326   97541     216           52.093023   True   \n",
-       "1  State 2   97627   97823     197           44.897959  False   \n",
-       "2  State 2  118079  118179     101            0.000000  False   \n",
-       "3  State 2  154610  157697    3088           96.469064   True   \n",
-       "4  State 2  157782  159591    1810           85.848535   True   \n",
-       "5  State 2  358766  358942     177           86.363636   True   \n",
-       "6  State 2  552537  552862     326           97.230769   True   \n",
-       "7  State 2  637579  638153     575           81.184669   True   \n",
-       "8  State 2  638334  640132    1799           86.540601   True   \n",
-       "9  State 2  640217  643449    3233           95.761139   True   \n",
+       "     state   start     end  length  percentage_overlap  \\\n",
+       "0  State 2   97326   97541     216           51.851852   \n",
+       "1  State 2   97627   97823     197           44.670051   \n",
+       "2  State 2  118079  118179     101            0.000000   \n",
+       "3  State 2  154610  157697    3088           96.437824   \n",
+       "4  State 2  157782  159591    1810           85.801105   \n",
+       "5  State 2  358766  358942     177           85.875706   \n",
+       "6  State 2  552537  552862     326           96.932515   \n",
+       "7  State 2  637579  638153     575           81.043478   \n",
+       "8  State 2  638334  640132    1799           86.492496   \n",
+       "9  State 2  640217  643449    3233           95.731519   \n",
        "\n",
-       "                                            overlaps  \n",
-       "0                                   [[97426, 97537]]  \n",
-       "1                                   [[97629, 97716]]  \n",
-       "2                                                 []  \n",
-       "3                                 [[154662, 157639]]  \n",
-       "4               [[157847, 157919], [157984, 159463]]  \n",
-       "5               [[358768, 358845], [358869, 358943]]  \n",
-       "6                                 [[552541, 552856]]  \n",
-       "7  [[637583, 637659], [637667, 637742], [637772, ...  \n",
-       "8               [[638448, 639930], [639995, 640067]]  \n",
-       "9               [[640275, 643254], [643333, 643447]]  "
+       "                                            overlaps  match  \n",
+       "0                                   [[97426, 97537]]   True  \n",
+       "1                                   [[97629, 97716]]  False  \n",
+       "2                                                 []  False  \n",
+       "3                                 [[154662, 157639]]   True  \n",
+       "4               [[157847, 157919], [157984, 159463]]   True  \n",
+       "5               [[358768, 358845], [358869, 358943]]   True  \n",
+       "6                                 [[552541, 552856]]   True  \n",
+       "7  [[637583, 637659], [637667, 637742], [637772, ...   True  \n",
+       "8               [[638448, 639930], [639995, 640067]]   True  \n",
+       "9               [[640275, 643254], [643333, 643447]]   True  "
       ]
      },
      "metadata": {},
@@ -3804,11 +3758,20 @@
     }
    ],
    "source": [
-    "df['percentage_overlap'] = np.array(overlap_ratios)*100\n",
-    "df['overlaps'] =overlaps\n",
+    "from assignment4.utils import find_overlap\n",
+    "overlap_lengths, overlap_genes= find_overlap(hits_gt50bp.head(10), genepos)\n",
+    "df['percentage_overlap'] = np.array(overlap_lengths/ df.length)*100\n",
+    "df['overlaps'] =overlap_genes\n",
     "df['match'] = df['percentage_overlap'] >50\n",
     "print(\"Table 3: Percentage overlap - predicted gene (> 50bp) vs gold genes\")\n",
     "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matches with 50% overlap threshold with gold positions :"
    ]
   },
   {
@@ -3826,7 +3789,7 @@
     "\n",
     "5. Most of the predictions struggle finding exact start and end position for that gene. For long predictions, the overlap is relatively high because of high margin of error. \n",
     "\n",
-    "6. Long Predictions(4,5,7,8,9) tend to conflate closely-spaced RNAs by one prediction"
+    "6. Some Predictions(4,5,7,8,9) tend to conflate closely-spaced RNAs by one prediction"
    ]
   },
   {
@@ -3838,7 +3801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
