--- a/Assignment5/notebooks/main.ipynb
+++ b/Assignment5/notebooks/main.ipynb
@@ -4,19 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Assignment 5\n",
+    "Krishan Subudhi : [ksubudhi@uw.edu](mailto:ksubudhi@uw.edu)\n",
+    "\n",
+    "Student Number : 2040900\n",
+    "\n",
+    "Date : 12/06/2020\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For kernel errors:\n",
     " \n",
-    "    pip install --upgrade pywin32==224\n",
+    "    pip install --upgrade pywin32==225\n",
     "\n",
     "https://stackoverflow.com/questions/58612306/how-to-fix-importerror-dll-load-failed-while-importing-win32api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
+    "try:\n",
+    "    display()\n",
+    "    gff = '../data/GCF_000091665.1_ASM9166v1_genomic.gff'\n",
+    "    fna = '../data/GCF_000091665.1_ASM9166v1_genomic.fna'\n",
+    "except Exception as e:\n",
+    "    display = print\n",
+    "    gff = './data/GCF_000091665.1_ASM9166v1_genomic.gff'\n",
+    "    fna = './data/GCF_000091665.1_ASM9166v1_genomic.fna'\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "# import importlib\n",
@@ -25,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -126,13 +158,13 @@
        "4     85   87       3      1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genome = get_seqs_from_file('../data/GCF_000091665.1_ASM9166v1_genomic.fna')[0]\n",
+    "genome = get_seqs_from_file(fna)[0]\n",
     "finder = ORFFinder(genome)\n",
     "orfs = [finder.get_all_orfs(rf ) for rf in (1,2,3)]\n",
     "orfs = pd.concat(orfs,ignore_index=True)\n",
@@ -149,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -158,13 +190,13 @@
        "848"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cds = np.array(get_cds_from_file('../data/GCF_000091665.1_ASM9166v1_genomic.gff'))\n",
+    "cds = np.array(get_cds_from_file(gff))\n",
     "true_orf_end = set(end-3 if  genome[end-3:end] in finder.stop_codons else end for end in cds[:,1])\n",
     "len(true_orf_end)"
    ]
@@ -178,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,35 +220,8 @@
     "bg_seqs = [get_reverse_complement(seq) for seq in positive_seqs]\n",
     "\n",
     "model = GeneModel(k = 5, pseudo_count=1)\n",
-    "model.build(positive_seqs, bg_seqs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Foreground T|AAGxy counts\n",
-      "     A   C    G    T\n",
-      "A  307  51  223  394\n",
-      "C  104  15   12  119\n",
-      "G  211  42   39  218\n",
-      "T  148  19   68  198\n",
-      "Background T|AAGxy counts\n",
-      "     A   C   G    T\n",
-      "A   90  26  48   95\n",
-      "C   87  22  15  119\n",
-      "G   41  20  26   59\n",
-      "T  139  39  64  175\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.print_sample_counts()"
+    "model.build(positive_seqs, bg_seqs)\n",
+    "# model.print_sample_counts()"
    ]
   },
   {
@@ -228,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +324,7 @@
        "4     85   87       3      1  False       NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,12 +345,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results"
+    "# Results\n",
+    "\n",
+    "Markov model parameters:\n",
+    "k = 5, pseudo_count=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +387,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>start</th>\n",
        "      <th>end</th>\n",
        "      <th>length</th>\n",
@@ -390,6 +399,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>36</td>\n",
        "      <td>36</td>\n",
@@ -399,6 +409,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35199</th>\n",
+       "      <td>35199</td>\n",
        "      <td>1664968</td>\n",
        "      <td>1664970</td>\n",
        "      <td>3</td>\n",
@@ -411,9 +422,9 @@
        "</div>"
       ],
       "text/plain": [
-       "         start      end  length  frame  isCDS    scores\n",
-       "0            1       36      36      1  False  1.181405\n",
-       "35199  1664968  1664970       3      1  False       NaN"
+       "       index    start      end  length  frame  isCDS    scores\n",
+       "0          0        1       36      36      1  False  1.181405\n",
+       "35199  35199  1664968  1664970       3      1  False       NaN"
       ]
      },
      "metadata": {},
@@ -450,6 +461,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>start</th>\n",
        "      <th>end</th>\n",
        "      <th>length</th>\n",
@@ -460,7 +472,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>35200</th>\n",
+       "      <th>0</th>\n",
+       "      <td>35200</td>\n",
        "      <td>2</td>\n",
        "      <td>94</td>\n",
        "      <td>93</td>\n",
@@ -469,7 +482,8 @@
        "      <td>2.557823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71132</th>\n",
+       "      <th>35932</th>\n",
+       "      <td>71132</td>\n",
        "      <td>1664921</td>\n",
        "      <td>1664968</td>\n",
        "      <td>48</td>\n",
@@ -482,9 +496,9 @@
        "</div>"
       ],
       "text/plain": [
-       "         start      end  length  frame  isCDS    scores\n",
-       "35200        2       94      93      2  False  2.557823\n",
-       "71132  1664921  1664968      48      2  False -1.381238"
+       "       index    start      end  length  frame  isCDS    scores\n",
+       "0      35200        2       94      93      2  False  2.557823\n",
+       "35932  71132  1664921  1664968      48      2  False -1.381238"
       ]
      },
      "metadata": {},
@@ -521,6 +535,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>start</th>\n",
        "      <th>end</th>\n",
        "      <th>length</th>\n",
@@ -531,7 +546,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>71133</th>\n",
+       "      <th>0</th>\n",
+       "      <td>71133</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
@@ -540,7 +556,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>106818</th>\n",
+       "      <th>35685</th>\n",
+       "      <td>106818</td>\n",
        "      <td>1664964</td>\n",
        "      <td>1664969</td>\n",
        "      <td>6</td>\n",
@@ -553,9 +570,9 @@
        "</div>"
       ],
       "text/plain": [
-       "          start      end  length  frame  isCDS    scores\n",
-       "71133         3        5       3      3  False       NaN\n",
-       "106818  1664964  1664969       6      3  False  1.869675"
+       "        index    start      end  length  frame  isCDS    scores\n",
+       "0       71133        3        5       3      3  False       NaN\n",
+       "35685  106818  1664964  1664969       6      3  False  1.869675"
       ]
      },
      "metadata": {},
@@ -563,8 +580,9 @@
     }
    ],
    "source": [
+    "\n",
     "for rf in (1,2,3):\n",
-    "    rf_orf = orfs[orfs.frame == rf]\n",
+    "    rf_orf = orfs[orfs.frame == rf].reset_index()\n",
     "    print('\\nReading Frame : ', rf)\n",
     "    print( 'Number of ORFs = ', len(rf_orf))\n",
     "    print('Summary of the first and last : ')\n",
@@ -573,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -581,65 +599,195 @@
      "output_type": "stream",
      "text": [
       "The total number of short ORFs =  81738\n",
-      "The total number of long ORFs =  118\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('The total number of short ORFs = ', len(orfs[orfs.length<50]) )\n",
-    "print('The total number of long ORFs = ', len(orfs[orfs.length>1400]) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "The total number of long ORFs =  118\n",
       "The total number of simple plus strand CDSs found in GenBank =  848\n"
      ]
     }
    ],
    "source": [
+    "print('The total number of short ORFs = ', len(orfs[orfs.length<50]) )\n",
+    "print('The total number of long ORFs = ', len(orfs[orfs.length>1400]) )\n",
     "print(\"The total number of simple plus strand CDSs found in GenBank = \", len(true_orf_end))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P(T | AAGxy) and  Q(T | AAGxy) for the 16 possible combinations of x,y in A,C,G,T :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(T | AAGxy), Q(T | AAGxy) for the 16 possible combinations of x,y in A,C,G,T :\n",
-      "Foreground T|AAGxy counts\n",
-      "     A   C    G    T\n",
-      "A  307  51  223  394\n",
-      "C  104  15   12  119\n",
-      "G  211  42   39  218\n",
-      "T  148  19   68  198\n",
-      "Background T|AAGxy counts\n",
-      "     A   C   G    T\n",
-      "A   90  26  48   95\n",
-      "C   87  22  15  119\n",
-      "G   41  20  26   59\n",
-      "T  139  39  64  175\n"
+      "\n",
+      "Foreground T|AAGxy counts for P(T | AAGxy) = \n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "      <th>G</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>307</td>\n",
+       "      <td>51</td>\n",
+       "      <td>223</td>\n",
+       "      <td>394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>104</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <td>211</td>\n",
+       "      <td>42</td>\n",
+       "      <td>39</td>\n",
+       "      <td>218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T</th>\n",
+       "      <td>148</td>\n",
+       "      <td>19</td>\n",
+       "      <td>68</td>\n",
+       "      <td>198</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A   C    G    T\n",
+       "A  307  51  223  394\n",
+       "C  104  15   12  119\n",
+       "G  211  42   39  218\n",
+       "T  148  19   68  198"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Background T|AAGxy counts for Q(T | AAGxy) = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "      <th>G</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>90</td>\n",
+       "      <td>26</td>\n",
+       "      <td>48</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>87</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>G</th>\n",
+       "      <td>41</td>\n",
+       "      <td>20</td>\n",
+       "      <td>26</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>T</th>\n",
+       "      <td>139</td>\n",
+       "      <td>39</td>\n",
+       "      <td>64</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A   C   G    T\n",
+       "A   90  26  48   95\n",
+       "C   87  22  15  119\n",
+       "G   41  20  26   59\n",
+       "T  139  39  64  175"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print('P(T | AAGxy), Q(T | AAGxy) for the 16 possible combinations of x,y in A,C,G,T :')\n",
-    "model.print_sample_counts()"
+    "model.print_sample_counts(display = display)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +999,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CDSs without stop codon at the end"
+    "### CDSs without stop codon at the end\n",
+    "Extra: \n",
+    "Some CDSs found in gff files did nto have stop codons at the end"
    ]
   },
   {
@@ -883,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,6 +1041,13 @@
     "with open('orfs.pickle','wb') as f:\n",
     "    pickle.dump(orfs, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
